--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,41 +17,29 @@
 ;==========================================================
 
 [colors]
-background = #d0181926
+background = #1e1e2e
 background-alt = #e02f2f2f
 
  
 ; text colors for flair
  
 ;red
-textcol_1 = #ed8796
+textcol_1 = #f38ba8
 
 
 ;peach
-textcol_2 = #8be9fd
-
-
-
-
-;yellow
-textcol_3 = #f5a97f
+textcol_2 = #fab387
 
 
 ;green
-textcol_4 = #50fa7b
+textcol_3 = #a6e3a1
 
 
 ;sky
-textcol_5 = #8aadf4
+textcol_4 = #74c7ec
 
 ;mauve
-textcol_6 = #c6a0f6
-
-;rosewater
-textcol_7 = #ffffff
-
-;teal
-wspaces_col = #ffb86c
+textcol_5 = #cba6f7
 
 ; defaulted text color for percentages n' shit
 text = #cad3f5
@@ -75,7 +63,7 @@ module-margin = 1
 separator = ++
 separator-foreground = ${colors.disabled}
 
-font-0 = Hack Nerd Font:size=11:antialias=true;2
+font-0 = monospace:size=11:antialias=true;2
 
 modules-left = battery 
 modules-center = xwindow
@@ -99,16 +87,16 @@ type = internal/battery
 format-prefix = ": "
 label = %percentage%
 format-charging = [<animation-charging>  <label-charging>
-format-charging-foreground = ${colors.textcol_6}
-format-discharging-foreground = ${colors.textcol_6}
+format-charging-foreground = ${colors.textcol_3}
+format-discharging-foreground = ${colors.textcol_3}
 label-charging = Charging: %percentage%%
-label-charging-foreground = ${colors.textcol_6}
-label-discharging-foreground = ${colors.textcol_6}
+label-charging-foreground = ${colors.textcol_3}
+label-discharging-foreground = ${colors.textcol_3}
 format-discharging = [<ramp-capacity>  <label-discharging> 
 format-discharging-suffix =  ]
-format-discharging-suffix-foreground = ${colors.textcol_6}
+format-discharging-suffix-foreground = ${colors.textcol_3}
 format-charging-suffix =  ]
-format-charging-suffix-foreground = ${colors.textcol_6}
+format-charging-suffix-foreground = ${colors.textcol_3}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -149,10 +137,10 @@ label-empty-padding = 1
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:60:...%
-format-prefix = [
+format-prefix = --[
 format-prefix-foreground = ${colors.text}
 format-suffix-foreground = ${colors.text}
-format-suffix = ]
+format-suffix = ]--
 label-foreground = ${colors.text}
 
 [module/filesystem]
@@ -162,7 +150,7 @@ interval = 4
 mount-0 = /
 
 label-mounted = [%mountpoint% %percentage_free%%]
-label-mounted-foreground = ${colors.textcol_3}
+label-mounted-foreground = ${colors.textcol_2}
 label-unmounted = [%mountpoint% not mounted]
 label-unmounted-foreground = ${colors.disabled}
 
@@ -170,11 +158,9 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 
 format-volume = [  <label-volume>
-format-volume-underline = ${colors.textcol_1}
 format-volume-foreground = ${colors.textcol_1}
 label-volume = %percentage%%]
 label-volume-foreground = ${colors.textcol_1}
-label-volume-underline = ${colors.textcol_1}
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
@@ -183,10 +169,8 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 format-prefix = "  "
 format-prefix-foreground = ${colors.textcol_2}
-format-prefix-underline = ${colors.textcol_2}
 label-layout = %layout%
 label-layout-foreground = ${colors.textcol_2}
-label-layout-underline = ${colors.textcol_2}
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
@@ -228,13 +212,12 @@ format-connected = <label-connected>
 inherit = network-base
 interface-type = wireless
 label-connected = [  %essid%]
-label-connected-foreground = ${colors.textcol_5}
-label-connected-underline = ${colors.textcol_5}
+label-connected-foreground = ${colors.textcol_4}
 [module/eth]
 inherit = network-base
 interface-type = wired
 label-connected = %local_ip%
-label-connected-foreground = ${colors.textcol_5}
+label-connected-foreground = ${colors.textcol_4}
 [module/date]
 type = internal/date
 interval = 1
@@ -242,8 +225,7 @@ interval = 1
 
 date = %H:%M:%S
 label = [  %date%]
-label-foreground = ${colors.textcol_6}
-label-underline = ${colors.textcol_6}
+label-foreground = ${colors.textcol_5}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
