--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,200 +1,101 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
+[base16-colors]
+background = #d01e1e2e
+text = #cdd6f4
+yellow = #f9e2af
+green = #a6e3a1
+red = #f38ba8
+peach = #fab387
+teal = #94e2d5
+blue = #89b4fa
+mauve = #cba6f7
 
-[colors]
-background = #1e1e2e
-background-alt = #e02f2f2f
-
- 
-; text colors for flair
- 
-;red
-textcol_1 = #f38ba8
-
-
-;peach
-textcol_2 = #fab387
-
-
-;green
-textcol_3 = #a6e3a1
-
-
-;sky
-textcol_4 = #74c7ec
-
-;mauve
-textcol_5 = #cba6f7
-
-; defaulted text color for percentages n' shit
-text = #cad3f5
-disabled = #939ab7
-
-[bar/mybar]
-width = 100%
-background = ${colors.background}
-foreground = ${colors.foreground}
-height = 30pt
-line-size = 5pt
-fixed-center = true
-border-size = 3pt
-border-color = #00000000
-
-padding-right = 2
-padding-left = 2
-
-module-margin = 1
-
-separator = ++
-separator-foreground = ${colors.disabled}
-
-font-0 = monospace:size=11:antialias=true;2
-
-modules-left = battery 
-modules-center = xwindow
-modules-right = filesystem pulseaudio wlan date
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
+[bar/base]
+height = 45px
 enable-ipc = true
-radius = 5
-tray-position = none
+font-0 = Fira Code Nerd Font:size=14;2
+border-size = 2px
+background = ${base16-colors.background}
+radius = 11
 
-; wm-restack = generic
-; wm-restack = bspwm
- wm-restack = i3
+[bar/menu]
+inherit = bar/base
+bottom = true
+width = 10%
+offset-y = 1%
+offset-x = 1%
+border-color = ${base16-colors.green}
+background = ${base16-colors.background}
+modules-center = menu
+font-0 = Fira Code Nerd Font:size=14;2
 
-; override-redirect = true
+[bar/screenshot]
+inherit = bar/base
+bottom = true
+width = 15%
+offset-y = 1%
+offset-x = 12%
+border-color = ${base16-colors.peach}
+background = ${base16-colors.background}
+modules-center = screenshot
+font-0 = Fira Code Nerd Font:size=14;2
 
-[module/battery]
-type = internal/battery
-format-prefix = ": "
-label = %percentage%
-format-charging = [<animation-charging>  <label-charging>
-format-charging-foreground = ${colors.textcol_3}
-format-discharging-foreground = ${colors.textcol_3}
-label-charging = Charging: %percentage%%
-label-charging-foreground = ${colors.textcol_3}
-label-discharging-foreground = ${colors.textcol_3}
-format-discharging = [<ramp-capacity>  <label-discharging> 
-format-discharging-suffix =  ]
-format-discharging-suffix-foreground = ${colors.textcol_3}
-format-charging-suffix =  ]
-format-charging-suffix-foreground = ${colors.textcol_3}
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-label-discharging =  Discharging: %percentage% 
-full-at = 99
-low_at = 5
-battery = BAT0
-adapter = AC
-poll-interval = 5
+[bar/workspaces]
+inherit = bar/base
+bottom = true
+width = 21%
+offset-y = 1%
+padding-right = 3
+offset-x = 78%
+border-color = ${base16-colors.blue}
+modules-center = xworkspaces
+font-0 = Fira Code Nerd Font:size=14;2
+
+[bar/topbar]
+inherit = bar/base
+bottom = false
+width = 80%
+offset-y = 1%
+padding-right = 1
+padding-left = 1
+offset-x = 10%
+border-color = ${base16-colors.red}
+modules-left = date
+modules-center = window
+modules-right = wlan
+font-0 = Fira Code Nerd Font:size=14;2
+
+[module/window]
+type = internal/xwindow
+format = [<label>]
+label = %title%
+format-foreground = ${base16-colors.text}
+label-maxlen = 60
 
 [module/xworkspaces]
 type = internal/xworkspaces
+format = <label-state>
+label-active = %icon% %name%
+label-active-foreground = ${base16-colors.blue}
+label-active-padding = 0
 
-label-active = %name%
-label-active-foreground = ${colors.text}
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.wspaces_col}
-label-active-padding = 1
+pin-workspaces = true
 
-label-occupied = %name%
-label-occupied-padding = 1
+enable-click = true
+enable-scroll = false
+reverse-scroll = false
+format-foreground = ${base16-colors.text}
 
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+[module/menu]
+type = custom/text
+label = [ Menu]
+label-foreground = ${base16-colors.green}
+click-left = rofi -show drun -modi drun
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-format-prefix = --[
-format-prefix-foreground = ${colors.text}
-format-suffix-foreground = ${colors.text}
-format-suffix = ]--
-label-foreground = ${colors.text}
-
-[module/filesystem]
-type = internal/fs
-interval = 4
-
-mount-0 = /
-
-label-mounted = [%mountpoint% %percentage_free%%]
-label-mounted-foreground = ${colors.textcol_2}
-label-unmounted = [%mountpoint% not mounted]
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = [  <label-volume>
-format-volume-foreground = ${colors.textcol_1}
-label-volume = %percentage%%]
-label-volume-foreground = ${colors.textcol_1}
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-format-prefix = "  "
-format-prefix-foreground = ${colors.textcol_2}
-label-layout = %layout%
-label-layout-foreground = ${colors.textcol_2}
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.textcol_2}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.textcol_3}
-label = %percentage_used:2%%
-label-foreground = ${colors.text}
-format-prefix-underline = ${colors.textcol_3}
-label-underline = ${colors.textcol_3}
-
-[module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.textcol_4}
-format-prefix-underline = ${colors.textcol_4}
-label = %percentage:2%%
-label-foreground = ${colors.text}
-label-underline = ${colors.textcol_4}
+[module/screenshot]
+type = custom/text
+label = [ Screenshot]
+label-foreground = ${base16-colors.peach}
+click-left = scrot screenshot.png
 
 [network-base]
 type = internal/network
@@ -202,32 +103,24 @@ interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#c6a0f6}disconnected
-label-disconnected-underline = ${colors.textcol_6}
+label-disconnected-underline = ${colors.text}
 background-alt = #2d2a36
 
 [module/wlan]
-
-
 format-connected = <label-connected>
 inherit = network-base
 interface-type = wireless
 label-connected = [  %essid%]
-label-connected-foreground = ${colors.textcol_4}
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %local_ip%
-label-connected-foreground = ${colors.textcol_4}
+label-connected-foreground = ${base16-colors.red}
+
 [module/date]
 type = internal/date
 interval = 1
-
-
 date = %H:%M:%S
 label = [  %date%]
-label-foreground = ${colors.textcol_5}
+label-foreground = ${base16-colors.red}
+
+
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
